# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.2055 2011/12/02 13:56:02 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.1.0.beta3 2011-12-??
 - 2011-12-02 Fixed bug#4548 - 'Ajax overwrites OnChange' in BuildSelection().

3.1.0.beta2 2011-12-06
 - 2011-11-30 Fixed bug#6715 - Setting CustomerID with otrs.AddCustomerUser.pl.
 - 2011-11-29 Fixed bug#7719 - Agent login page does not offer user to save password
    with Firefox browser.
 - 2011-11-29 Fixed bug#4957 - Password Change dialog misses "Current Password" option.
 - 2011-11-29 Show Article Creator in article view, similar to Idea#378.
 - 2011-11-28 Updated CPAN module Apache::DBI to version 1.11.
 - 2011-11-28 Updated CPAN module Mozilla::CA to version 20111025.
 - 2011-11-26 Added ReferenceData object that provides ISO-3166 country codes.
    Could be extend to contain other data later.
 - 2011-11-23 Fixed bug#7926 - AJAX refresh does not work on some fields.
 - 2011-11-24 Fixed bug#7931 - Operations and Invokers can't be deleted from web service if the
    Controller is not present or not  registered.
 - 2011-11-23 Fixed bug#7921 - Running DBUpdate-to-3.1-post.mssql.sql on Microsoft SQL Server
    generates errors.
 - 2011-11-23 Added Idea#378 - Show ticket creator in zoom view.
 - 2011-11-23 Fixed bug#6139 - Hide current queue in queue move dialog in AgentTicketZoom.
 - 2011-11-23 Fixed bug#6365 - AdminMailAccount Queue field should be hidden or disabled if Dispatching
    is set to 'By Mail'.
 - 2011-11-23 Fixed bug#7930 - Depreciation warnings in error log when running OTRS on
    Perl 5.14.
 - 2011-11-21 Fixed bug#7914 - DynamicField value Storage on AgentTicketActionCommon.pm and
    AgentTicketPhoneCommon.pm.