@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.2055 2011/12/02 13:56:02 mg Exp $
+# $Id: CHANGES,v 1.2056 2011/12/02 15:28:54 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 3.1.0.beta3 2011-12-??
+ - 2011-12-02 Fixed bug#7442 - Dashboard permission check for multiple Groups only
+    tests first group.
  - 2011-12-02 Fixed bug#4548 - 'Ajax overwrites OnChange' in BuildSelection().
 
 3.1.0.beta2 2011-12-06
@@ -170,6 +172,10 @@
      of > 70 characters exists.
 
 3.0.12 ????-??-??
+ - 2011-12-02 Fixed bug#7442 - Dashboard permission check for multiple Groups only
+    tests first group.
+ - 2011-11-29 Fixed bug#7719 - Agent login page does not offer user to save password
+    with Firefox browser.
  - 2011-11-30 Fixed bug#6715 - Setting CustomerID with otrs.AddCustomerUser.pl.
  - 2011-11-28 Updated CPAN module Apache::DBI to version 1.11.
  - 2011-11-23 Fixed bug#7930 - Depreciation warnings in error log when running OTRS on
